--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="submit">Затвердити</string>
     <string name="next">Наступне питання</string>
     <string name="yes">Так</string>
+    <string name="game_over">Квіз закінчений. Ваш результат:</string>
 </resources>
